@@ -1,5 +1,8 @@
 2007-10-15  Andreas K. Foerster  <info@akfoerster.de>
 
+	* akfavatar.pas (ScreenSize):
+	implemented as functuion (was a variable)
+
 	* akfavatar.pas (AvatarImageData):
 	new function
 
